--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 # Version 1.0
 # Didier SEVERIN (Académie de la Réunion)
-# Dernière modification : 14/05/2020
+# Dernière modification : 14/05/2020 (ajout de la variable contenant le nom de l'admin local pour passer les commandes ne nécessitant pas de sudo)
 
 # Répertoire additionnel (autres scripts, archives, ...)
 second_dir=./apps
@@ -9,11 +9,11 @@ second_dir=./apps
 scribe_def_ip="172.18.248.2"
 
 # Info admin local
-localadmin=le_nom_utilisateur_admin_local
+localadmin=administrateur
 
 # User Scribe pour APT
-scribeuserapt="login_cree_specifique_apt"
-scribepass="le_mot_de_passe_correspondant"
+scribeuserapt="apt.esubuntu"
+scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
 
 # Paramètres Proxy
 proxy="yes"
@@ -44,7 +44,7 @@ nom_domaine="COLLEGE"
 sos_info="Secrétariat de Direction (AED-TICE)"
 
 # Groupe ESU
-salle=linux-info 
+salle=linux-port 
 
 # Reboot
 reboot=yes
