--- a/config.cfg
+++ b/config.cfg
@@ -62,3 +62,7 @@ ansible=yes
 
 # Photocopieur à configurer ?
 config_photocopieuse="o"
+
+# Logiciels de TBI à installer ?
+ebeam=yes
+activinspire=yes
