--- a/config.cfg
+++ b/config.cfg
@@ -66,3 +66,6 @@ config_photocopieuse="o"
 # Logiciels de TBI à installer ?
 ebeam=yes
 activinspire=yes
+
+# Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
+installdepuisdomaine=no
