--- a/config.cfg
+++ b/config.cfg
@@ -31,7 +31,7 @@ proxauth="o"
 pagedemarragepardefaut="https://lite.qwant.com"
 
 # Lancement script Esubuntu (lire doc ici : https://frama.link/esub)
-esubuntu=yes
+esubuntu="yes"
 
 # Paramètres Esubuntu
 nom_etab="Collège Bois de Nèfles"
@@ -44,28 +44,32 @@ nom_domaine="COLLEGE"
 sos_info="Secrétariat de Direction (AED-TICE)"
 
 # Groupe ESU
-salle=linux-port 
+salle="linux-port"
 
 # Reboot
-reboot=yes
+reboot="yes"
 
 # Heure d'extinction (inscrire juste l'heure - l'extinction se fera à l'heure pile)
 # Si vous ne voulez pas d'extinction automatique, laissez vide
 extinction=20
 
 # Lancer les scripts de postinstallation ?
-postinstallbase=yes
-postinstalladditionnel=yes
+postinstallbase="yes"
+postinstalladditionnel="yes"
 
 # Ansible
-ansible=yes
+ansible="yes"
 
 # Photocopieur à configurer ?
-config_photocopieuse="o"
+config_photocopieuse="yes"
 
 # Logiciels de TBI à installer ?
-ebeam=yes
-activinspire=yes
+ebeam="yes"
+activinspire="yes"
 
 # Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
-installdepuisdomaine=no
+installdepuisdomaine="yes"
+
+# Install Logs
+#logfile=/home/$localadmin/Bureau/install_esubuntu.log
+logfile=./install_esubuntu.log
