Dernière mise à jour (26/05/20) Ajout de commentaires

--- a/config.cfg
+++ b/config.cfg
@@ -25,7 +25,7 @@ proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.r
 proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_def_port"
 
 # Proxy authentifiant ?
-proxauth="o"
+proxauth="yes"
 
 # Paramètres Firefox
 pagedemarragepardefaut="https://lite.qwant.com"
