Modification pas de postinstall

--- a/config.cfg
+++ b/config.cfg
@@ -54,8 +54,8 @@ reboot="yes"
 extinction=20
 
 # Lancer les scripts de postinstallation ?
-postinstallbase="yes"
-postinstalladditionnel="yes"
+postinstallbase="no"
+postinstalladditionnel="no"
 
 # Ansible
 ansible="yes"
@@ -64,12 +64,11 @@ ansible="yes"
 config_photocopieuse="yes"
 
 # Logiciels de TBI à installer ?
-ebeam="yes"
-activinspire="yes"
+ebeam="no"
+activinspire="no"
 
 # Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
 installdepuisdomaine="yes"
 
 # Install Logs
-#logfile=/home/$localadmin/Bureau/install_esubuntu.log
-logfile=./install_esubuntu.log
+logfile=/home/$localadmin/Bureau/install_esubuntu.log
