--- a/config.cfg
+++ b/config.cfg
@@ -15,29 +15,33 @@ localadmin=administrateur
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
 
+# Proxy authentifiant ?
+proxauth=true
+
 # Paramètres Proxy
 proxy="yes"
-proxy_wgetrc="http://172.18.248.1:3129"
 proxy_def_ip="172.18.248.1"
 proxy_def_port="3128"
+proxy_wgetrc="http://$proxy_def_ip:3129"
 proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
 proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
-proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_def_port"
-
-# Proxy authentifiant ?
-proxauth="yes"
+if $proxauth; then
+	proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_def_port"
+else
+	proxy_params="http://$proxy_def_ip:$proxy_def_port"
+fi
 
 # Paramètres Firefox
 pagedemarragepardefaut="https://lite.qwant.com"
 
 # Lancement script Esubuntu (lire doc ici : https://frama.link/esub)
-esubuntu="yes"
+esubuntu=true
 
 # Paramètres Esubuntu
 nom_etab="Collège Bois de Nèfles"
-proxy="172.18.248.1:3128"
+proxy="$proxy_def_ip:$proxy_def_port"
 # port du cntlm autre que 3129
-port_cntlm="3128"
+port_cntlm="$proxy_def_port"
 # type autentification LM NT NTLMv2
 type_cntlm="LM"
 nom_domaine="COLLEGE"
@@ -47,28 +51,28 @@ sos_info="Secrétariat de Direction (AED-TICE)"
 salle="linux-port"
 
 # Reboot
-reboot="yes"
+reboot=true
 
 # Heure d'extinction (inscrire juste l'heure - l'extinction se fera à l'heure pile)
 # Si vous ne voulez pas d'extinction automatique, laissez vide
 extinction=20
 
 # Lancer les scripts de postinstallation ?
-postinstallbase="no"
-postinstalladditionnel="no"
+postinstallbase=true
+postinstalladditionnel=false
 
 # Ansible
-ansible="yes"
+ansible=true
 
 # Photocopieur à configurer ?
-config_photocopieuse="yes"
+config_photocopieuse=true
 
 # Logiciels de TBI à installer ?
-ebeam="no"
-activinspire="no"
+ebeam=false
+activinspire=false
 
 # Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
-installdepuisdomaine="yes"
+installdepuisdomaine=true
 
 # Install Logs
-logfile=/home/$localadmin/Bureau/install_esubuntu.log
+logfile=/home/$localadmin/install_esubuntu.log
