Mise à jour du fichier de configuration (variables booléennes) Ajout d'un script d'installation d'OpenOffice + Cmaths + TexMaths Ajout de Geophar à dans le script de postinstall

--- a/config.cfg
+++ b/config.cfg
@@ -76,3 +76,11 @@ installdepuisdomaine=true
 
 # Install Logs
 logfile=/home/$localadmin/install_esubuntu.log
+
+# Bureautique
+WPSOffice=false
+LibreOffice=false
+OpenOffice=true
+
+# Supervision
+Veyon=true
