Fusion des scripts LibreOffice, OpenOffice et WPS Office

--- a/config.cfg
+++ b/config.cfg
@@ -79,8 +79,8 @@ logfile=/home/$localadmin/install_esubuntu.log
 
 # Bureautique
 WPSOffice=false
-LibreOffice=false
-OpenOffice=true
+LibreOffice=true
+OpenOffice=false
 
 # Supervision
 Veyon=true
