Ajout Variable lectureDVD

--- a/config.cfg
+++ b/config.cfg
@@ -16,7 +16,7 @@ scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
 
 # Proxy authentifiant ?
-proxauth=true
+proxauth=false
 
 # Paramètres Proxy
 proxy="yes"
