--- a/config.cfg
+++ b/config.cfg
@@ -27,6 +27,7 @@ sos_info="Secrétariat de Direction (AED-TICE)"
 # User Scribe pour APT
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
+scribeuseraptdom=$nom_domaine"\\"$scribeuserapt
 
 # Proxy authentifiant ?
 proxauth=false
