--- a/config.cfg
+++ b/config.cfg
@@ -27,7 +27,8 @@ sos_info="Secrétariat de Direction (AED-TICE)"
 # User Scribe pour APT
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
-scribeuseraptdom=$nom_domaine"\\"$scribeuserapt
+scribeuseraptdom=$scribeuserapt
+portapt="3129"
 
 # Proxy authentifiant ?
 proxauth=false
