--- a/config.cfg
+++ b/config.cfg
@@ -27,24 +27,24 @@ sos_info="Secrétariat de Direction (AED-TICE)"
 # User Scribe pour APT
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
-scribeuseraptdom=$scribeuserapt
 portapt="3129"
 
 # Proxy authentifiant ?
 proxauth=false
 
 # Paramètres Proxy
-proxy="yes"
 proxy_def_ip="172.18.248.1"
 proxy_def_port="3128"
-proxy_wgetrc="http://$proxy_def_ip:3129"
-proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
-proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
+proxy_alt_port="3129"
 if $proxauth; then
-	proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_def_port"
+	proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_alt_port"
 else
 	proxy_params="http://$proxy_def_ip:$proxy_def_port"
 fi
+proxy_wgetrc="http://$proxy_def_ip:proxy_def_port"
+proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
+proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
+
 
 # Paramètres Firefox
 pagedemarragepardefaut="https://lite.qwant.com"
@@ -60,14 +60,14 @@ reboot=true
 extinction=20
 
 # Lancer les scripts de postinstallation ?
-postinstallbase=true
+postinstallbase=false
 postinstalladditionnel=false
 
 # Ansible
-ansible=true
+ansible=false
 
 # Photocopieur à configurer ?
-config_photocopieuse=true
+config_photocopieuse=false
 
 # Logiciels de TBI à installer ?
 ebeam=false
