--- a/config.cfg
+++ b/config.cfg
@@ -41,7 +41,7 @@ if $proxauth; then
 else
 	proxy_params="http://$proxy_def_ip:$proxy_def_port"
 fi
-proxy_wgetrc="http://$proxy_def_ip:proxy_def_port"
+proxy_wgetrc="http://$proxy_def_ip:$proxy_def_port"
 proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
 proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
 
