--- a/config.cfg
+++ b/config.cfg
@@ -14,16 +14,6 @@ localadmin=administrateur
 # Lancement script Esubuntu (lire doc ici : https://frama.link/esub)
 esubuntu=true
 
-# Paramètres Esubuntu
-nom_etab="Collège Bois de Nèfles"
-proxy="$proxy_def_ip:$proxy_def_port"
-# port du cntlm autre que 3129
-port_cntlm="$proxy_def_port"
-# type autentification LM NT NTLMv2
-type_cntlm="LM"
-nom_domaine="COLLEGE"
-sos_info="Secrétariat de Direction (AED-TICE)"
-
 # User Scribe pour APT
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
@@ -41,16 +31,25 @@ if $proxauth; then
 else
 	proxy_params="http://$proxy_def_ip:$proxy_def_port"
 fi
-proxy_wgetrc="http://$proxy_def_ip:$proxy_def_port"
+proxy_wgetrc="http://$proxy_def_ip:$proxy_alt_port"
 proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
 proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
 
-
-# Paramètres Firefox
-pagedemarragepardefaut="https://lite.qwant.com"
+# Paramètres Esubuntu
+nom_etab="Collège Bois de Nèfles"
+proxy="$proxy_def_ip:$proxy_def_port"
+# port du cntlm autre que 3129
+port_cntlm="$proxy_def_port"
+# type autentification LM NT NTLMv2
+type_cntlm="LM"
+nom_domaine="COLLEGE"
+sos_info="Secrétariat de Direction (AED-TICE)"
 
 # Groupe ESU
 salle="linux-port"
+
+# Paramètres Firefox
+pagedemarragepardefaut="https://lite.qwant.com"
 
 # Reboot
 reboot=true
