--- a/config.cfg
+++ b/config.cfg
@@ -20,7 +20,7 @@ scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
 portapt="3129"
 
 # Proxy authentifiant ?
-proxauth=true
+proxauth=false
 
 # Paramètres Proxy
 proxy_def_ip="172.18.248.1"
