--- a/config.cfg
+++ b/config.cfg
@@ -24,14 +24,15 @@ proxauth=false
 
 # Paramètres Proxy
 proxy_def_ip="172.18.248.1"
-proxy_def_port="3128"
 proxy_alt_port="3129"
+# proxy_def_port="3128" Le 3128 est maintenant réservé aux postes Windows Domaine
+proxy_def_port=$proxy_alt_port
 if $proxauth; then
-	proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_alt_port"
+	proxy_params="http://$scribeuserapt:$scribepass@$proxy_def_ip:$proxy_def_port"
 else
 	proxy_params="http://$proxy_def_ip:$proxy_def_port"
 fi
-proxy_wgetrc="http://$proxy_def_ip:$proxy_alt_port"
+proxy_wgetrc="http://$proxy_def_ip:$proxy_def_port"
 proxy_gnome_noproxy="[ 'localhost', '127.0.0.0/8', '172.18.248.0/21', '192.168.0.0/16', '*.col-bdn.re' ]"
 proxy_env_noproxy="localhost,127.0.0.1,192.168.0.0/16,172.18.248.0/21,.col-bdn.re"
 
