--- a/config.cfg
+++ b/config.cfg
@@ -9,7 +9,7 @@ second_dir=./apps
 scribe_def_ip="172.18.248.2"
 
 # Info admin local
-localadmin=administrateur
+localadmin=$SUDO_USER
 
 # Lancement script Esubuntu (lire doc ici : https://frama.link/esub)
 esubuntu=true
