Epuration des variables en doublon

--- a/config.cfg
+++ b/config.cfg
@@ -2,6 +2,9 @@
 # Didier SEVERIN (Académie de la Réunion)
 # Dernière modification : 14/05/2020 (ajout de la variable contenant le nom de l'admin local pour passer les commandes ne nécessitant pas de sudo)
 
+# Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
+installdepuisdomaine=true
+
 # Répertoire additionnel (autres scripts, archives, ...)
 second_dir=./apps
 
@@ -17,7 +20,6 @@ esubuntu=true
 # User Scribe pour APT
 scribeuserapt="apt.esubuntu"
 scribepass="Zaf1r4poRSrt4dkkfs2d12z5"
-portapt="3129"
 
 # Proxy authentifiant ?
 proxauth=false
@@ -47,7 +49,7 @@ nom_domaine="COLLEGE"
 sos_info="Secrétariat de Direction (AED-TICE)"
 
 # Groupe ESU
-salle="linux-port"
+salle="linux-grp_eole"
 
 # Paramètres Firefox
 pagedemarragepardefaut="https://lite.qwant.com"
@@ -57,7 +59,7 @@ reboot=true
 
 # Heure d'extinction (inscrire juste l'heure - l'extinction se fera à l'heure pile)
 # Si vous ne voulez pas d'extinction automatique, laissez vide
-extinction=20
+extinction=19
 
 # Lancer les scripts de postinstallation ?
 postinstallbase=false
@@ -73,9 +75,6 @@ config_photocopieuse=false
 ebeam=false
 activinspire=false
 
-# Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
-installdepuisdomaine=true
-
 # Install Logs
 logfile=/home/$localadmin/install_esubuntu.log
 
@@ -86,6 +85,3 @@ OpenOffice=false
 
 # Supervision
 Veyon=true
-
-# DVD
-lectureDVD=true
