--- a/ds_votre_groupe_esu/conky/conky.cfg
+++ b/ds_votre_groupe_esu/conky/conky.cfg
@@ -84,9 +84,7 @@ ${offset 25}${execi 86400 lsb_release -si} : ${execi 86400 lsb_release -sr} ${ex
 
 ${offset 3}${font Ubuntu:size=10:bold}${color4}Réseau
 ${hr 2}
-### Si vous n'avez pas l'affichage de l'adree IP, vous pouvez modifier la valeur ci-dessous (ens5) par celle des clients (voir avec ifconfig)
-### Vous pouvez aussi désactiver la ligne si vous ne voulez pas afficher l'ip (# devant)
-${offset 25}${font Ubuntu:size=10:normal}${color1}Adresse IP : ${addr ens5}
+${offset 25}${font Ubuntu:size=10:normal}${color1}Adresse IP : ${addr eth0}
 
 ${color4}${hr 2}
 ${offset 3}${font Ubuntu:size=10:bold}${color4}Espace Disque Utilise:
