Mod Config Pour RNE (GLPI)

--- a/config.cfg
+++ b/config.cfg
@@ -2,6 +2,9 @@
 # Didier SEVERIN (Académie de la Réunion)
 # Dernière modification : 14/05/2020 (ajout de la variable contenant le nom de l'admin local pour passer les commandes ne nécessitant pas de sudo)
 
+# RNE Etablissement (Pour GLPI)
+rne_etab="9741188Y"
+
 # Installe-t-on depuis le domaine (yes) ou sur un autre réseau (*) ?
 installdepuisdomaine=true
 
